# mqttclient

./: CMakeLists.txt  build.sh
common/PLOOC/: plooc_class.h
docs/: mqtt-aliyun.md
mqttclient/: mqttclient.c  mqttclient.h
test/: CMakeLists.txt
test/ali/: CMakeLists.txt  test.c
test/my/: CMakeLists.txt  my_test.cpp  my_test_pub.c  my_test_sub.c
